--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
